src/test/deca/syntax/invalid/test_parser_non_lvalue.deca
// Description:
//    Program testing the raising of an exception for a non-lvalue.
//
// Results:
//    Line 11: left-hand side of assignment is not an lvalue.
//
// History:
//    Created on 19/12/2024

{
    5 = x;
}
